--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <span>
+            <button mat-button routerLink="/jobs">
+                Scheduleded Jobs
+            </button>
+        </span>
+    </mat-toolbar-row>
+</mat-toolbar>
+<router-outlet></router-outlet>
