--- a/src/app/home/jobs/jobs.component.scss
+++ b/src/app/home/jobs/jobs.component.scss
@@ -1,3 +1,35 @@
 table {
     width: 100%;
   }
+
+.search {
+ text-align: center;
+}
+
+.search-name {
+ display: inline-block;
+ margin-right: 24px
+}
+
+
+.search-date {
+    display: inline-block;
+}
+
+.blue {
+  background-color: blue
+}
+
+.green {
+  background-color: green
+}
+
+.red {
+  background-color: red
+}
+
+.grey {
+  background-color: grey
+}
+
+
