--- a/src/app/home/jobs/jobs.component.html
+++ b/src/app/home/jobs/jobs.component.html
@@ -1,17 +1,17 @@
 <div class="search">
-<div class="search-name">
-    <mat-form-field>
-        <input matInput type="text" [formControl]="nameFilter" placeholder="Filter by name">
-    </mat-form-field>
-</div>
+    <div class="search-name">
+        <mat-form-field>
+            <input matInput type="text" [formControl]="nameFilter" placeholder="Filter by name">
+        </mat-form-field>
+    </div>
 
-<div class="search-date">
-    <mat-form-field>
-        <input matInput [matDatepicker]="picker" placeholder="Filter by date" [formControl]="dateFilter">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
-</div>
+    <div class="search-date">
+        <mat-form-field>
+            <input matInput [matDatepicker]="picker" placeholder="Filter by date" [formControl]="dateFilter">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+    </div>
 </div>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -23,27 +23,35 @@
 
     <ng-container matColumnDef="scheduledStartTime">
         <th mat-header-cell *matHeaderCellDef> Scheduled Start Time </th>
-        <td mat-cell *matCellDef="let element"> {{element.scheduledStartTime }} </td>
+        <td mat-cell *matCellDef="let element"> {{element.scheduledStartTime | date }} </td>
     </ng-container>
 
     <ng-container matColumnDef="scheduledEndTime">
         <th mat-header-cell *matHeaderCellDef> Scheduled End Time </th>
-        <td mat-cell *matCellDef="let element"> {{element.scheduledEndTime }} </td>
+        <td mat-cell *matCellDef="let element"> {{element.scheduledEndTime | date }} </td>
     </ng-container>
 
     <ng-container matColumnDef="actualStartTime">
         <th mat-header-cell *matHeaderCellDef> Actual Start Time </th>
-        <td mat-cell *matCellDef="let element"> {{element.actualStartTime }} </td>
+        <td mat-cell *matCellDef="let element"> {{element.actualStartTime | date }} </td>
     </ng-container>
 
     <ng-container matColumnDef="actualEndTime">
         <th mat-header-cell *matHeaderCellDef> Actual End Time </th>
-        <td mat-cell *matCellDef="let element"> {{element.actualEndTime  }} </td>
+        <td mat-cell *matCellDef="let element"> {{element.actualEndTime | date }} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let element"> {{element.status  }} </td>
+        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element"> <button mat-icon-button color="accent"
+                (click)="startEdit(element.id, element.applicationName, element.scheduledStartTime, element.scheduledEndTime)">
+                <mat-icon aria-label="Edit">edit</mat-icon>
+            </button> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
